--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,23 @@
 {{ define "content" }}
 <p class="lead">
-  <a href="/thread/new">Start a thread</a> or join one below!
+  <a href="/thread/new">Start a new thread</a> or join one below!
 </p>
 
 {{ range . }}
   <div class="panel panel-default">
     <div class="panel-heading">
-            <span class="lead"> <i class="fa fa-comment-o"></i> <pre>{{ .Topic }}</pre></span>
+            <span class="lead">
+                <i class="fa fa-comment-o"></i>
+                <a href="/thread/read?id={{.Uuid }}"> <pre class="topic-size">{{ .Topic }}</pre> </a>
+            </span>
     </div>
     <div class="panel-body">
-      Started by {{ .User.Name }} - {{ .CreatedAtDate }} - {{ .NumReplies }} posts.
+      Started by {{ .User.Name }} - {{ .CreatedAtDate }} - {{ .NumReplies }} 条评论.
+      <!--
       <div class="pull-right">
         <a href="/thread/read?id={{.Uuid }}">Read more</a>
       </div>
+      -->
     </div>
   </div>
 {{ end }}
