--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <title>骄傲的中年</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/login.css" rel="stylesheet">
   </head>
   <body>
     {{ template "navbar" . }}
