--- a/templates/new.thread.html
+++ b/templates/new.thread.html
@@ -1,9 +1,10 @@
 {{ define "content" }}
 
 <form role="form" action="/thread/create" method="post">
-  <div class="lead">Start a new thread with the following topic</div>
+  <div class="lead">Start a new thread with the following topic and body</div>
   <div class="form-group">
-    <textarea class="form-control" name="topic" id="topic" placeholder="Thread topic here" rows="4"></textarea>
+    <textarea class="form-control" name="topic" id="topic" placeholder="Thread topic here" rows="1"></textarea>
+    <textarea class="form-control" name="body" id="body" placeholder="Thread body here" rows="4"></textarea>
     <br/>
     <br/>
     <button class="btn btn-lg btn-primary pull-right" type="submit">Start this thread</button>
