--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -2,7 +2,11 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-          <span class="lead"> <i class="fa fa-comment-o"></i> <pre>{{ .Topic }}</pre></span>
+      <span class="lead">
+          <i class="fa fa-comment-o"></i>
+          <pre class="topic-size" >{{ .Topic }}</pre>
+          <pre>{{ .Body }}</pre>
+      </span>
     <div class="pull-right">
       Started by {{ .User.Name }} - {{ .CreatedAtDate }}
     </div>
