--- a/templates/private.thread.html
+++ b/templates/private.thread.html
@@ -5,7 +5,7 @@
       <span class="lead">
           <i class="fa fa-comment-o"></i>
           <pre class="topic-size">{{ .Topic }}</pre>
-          <pre>{{ .Body }}</pre>
+          <pre>{{ .Body | recogurl | html }}</pre>
       </span>
     <div class="pull-right">
       Started by {{ .User.Name }} - {{ .CreatedAtDate }}
@@ -17,7 +17,7 @@
   <div class="panel-body">
           <span class="lead">
               <i class="fa fa-comment"></i>
-              <pre>{{ .Body }}</pre>
+              <pre>{{ .Body | recogurl | html }}</pre>
           </span>
     <div class="pull-right">
       {{ .User.Name }} - {{ .CreatedAtDate }}
