--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/login.css" rel="stylesheet">
+    <link href="/static/css/bbs.css" rel="stylesheet">
   </head>
   <body>
     {{ template "navbar" . }}
