--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,14 @@
 
 <form class="form-signin center" role="form" action="/authenticate" method="post">
   <h2 class="form-signin-heading">
-    <i class="fa fa-comments-o">
-      骄傲的中年
-    </i>
+    <i class="fa fa-comments-o"></i>骄傲的中年
   </h2>
   <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
   <input type="password" name="password" class="form-control" placeholder="Password" required>
   <br/>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
   <br/>
-  <a class="lead pull-right" href="/signup">Sign up</a>
+  <a class="lead pull-right" href="/signup">注册</a>
 </form>
 
 {{ end }}
