--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -15,10 +15,12 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
+        <li><a class="btn-link" href="/">首页</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/logout">Logout</a></li>
+        <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
+        <li><a class="btn-link" href="/login" ><i class="fa fa-id-card"></i>管理员</a></li>
+        <li><a class="btn-link" href="/logout"><i class="fa fa-sign-out"></i>登出</a></li>
       </ul>
     </div>
   </div>
