--- a/templates/public.navbar.html
+++ b/templates/public.navbar.html
@@ -15,10 +15,13 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
+        <li><a class="btn-link" href="/">首页</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Login</a></li>
+        <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
+        <li><a class="btn-link" href="/login" ><i class="fa fa-id-card"></i>管理员</a></li>
+        <li><a class="btn-link" href="/login"><i class="fa fa-user-o"></i>登录</a></li>
+        <li><a class="btn-link" href="/signup"><i class="fa fa-sign-in"></i>注册</a></li>
       </ul>
     </div>
   </div>
