--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -2,26 +2,33 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-      <span class="lead">
-          <i class="fa fa-comment-o"></i>
-          <pre class="topic-size" >{{ .Topic }}</pre>
-          <pre>{{ .Body | html }}</pre>
-      </span>
-    <div class="pull-right">
-      Started by {{ .User.Name }} - {{ .CreatedAtDate }}
-    </div>
-
+        <h3 class="panel-title bbs-title">
+          <span class="bbs-pre">{{ .Topic }}</span>
+        </h3>
   </div>
+  <div class="panel-footer">
+        {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}&nbsp;&nbsp;&nbsp;分类: 杂项
+  </div>
+
+  <span class="bbs-pre bbs-body">{{ .Body | html }}</span>
   
   {{ range .Posts }}
-  <div class="panel-body">
-          <span class="lead"> <i class="fa fa-comment"></i> <pre>{{ .Body | html }}</pre></span>
-    <div class="pull-right">
-      {{ .User.Name }} - {{ .CreatedAtDate }}
-    </div>    
+  <div class="panel-footer">
+        <span>
+                <i class="fa fa-comment"></i>
+                {{ .User.Name }}&nbsp;&nbsp;&nbsp;{{ .CreatedAtDate }}
+        </span>
   </div>
-  {{ end }}    
+
+  <span class="bbs-pre bbs-body">{{ .Body | html }}</span>
+  {{ end }}
 
 </div>
+
+
+<form role="form" action="/login" method="POST">
+          <input type="hidden" name="uuid" value="{{ .Uuid }}">
+          <button class="btn btn-primary pull-left" type="submit">评论</button>
+</form>
 
 {{ end }}
