--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,14 @@
   </h2>
   <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
   <input type="password" name="password" class="form-control" placeholder="Password" required>
+
+  {{ if ne .ThreadUuid "" }}
+      <input type="hidden" name="uuid" value="{{ .ThreadUuid }}">
+  {{ end }}
+
+  {{ if .Failed }}
+      <p class="text-danger">用户名或密码错误</p>
+  {{ end }}
   <br/>
   <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
   <br/>
