--- a/public/css/bbs.css
+++ b/public/css/bbs.css
@@ -10,12 +10,26 @@
   margin-top:   0px; */
 }
 
+/* 兼容之前非CKeidtor输入的Body */
 .bbs-pre {
   white-space:  pre;
+  border:       none;
+  margin-left:  15px;
+  margin-right: 15px;
+  padding-top:    10px;
+  padding-bottom: 10px;
 }
 
-.bbs-body {
-  border:  none;
+/* CKeidtor输入的Body 已编排格式 */
+div pre {
+  border:   none !important;
+  background-color: #FFFFFF !important;
+  padding: 0px !important;
+}
+
+/* CKeidtor输入的Body 未编排格式 */
+.bbs-text {
+  padding: 10px 15px;
 }
 
 
@@ -23,3 +37,11 @@
         color: red;
         border-color: #285e8e; /*set the color you want here*/
 }
+
+.inaline { 
+        overflow: hidden; 
+        white-space: nowrap; 
+        text-overflow: ellipsis;
+        color: #999999;
+        /*clip  修剪文本。*/ 
+}  
