--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -3,14 +3,18 @@
 <div class="panel panel-default">
   <div class="panel-heading">
         <h3 class="panel-title bbs-title">
-          <span class="bbs-pre">{{ .Topic }}</span>
+          <span>{{ .Topic }}</span>
         </h3>
   </div>
   <div class="panel-footer">
         {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}&nbsp;&nbsp;&nbsp;分类: 杂项
   </div>
 
-  <span class="bbs-pre bbs-body">{{ .Body | html }}</span>
+  {{ if .CompatibleNonCkeidtor }}
+  <div class="bbs-pre">{{ .Body | recogurl | html }}</div>
+  {{ else }}
+  <div class="bbs-text">{{ .Body | html }}</div>
+  {{ end }}
   
   {{ range .Posts }}
   <div class="panel-footer">
@@ -20,7 +24,12 @@
         </span>
   </div>
 
-  <span class="bbs-pre bbs-body">{{ .Body | html }}</span>
+  {{ if .CompatibleNonCkeidtor }}
+  <div class="bbs-pre">{{ .Body | recogurl | html }}</div>
+  {{ else }}
+  <div class="bbs-text">{{ .Body | html }}</div>
+  {{ end }}
+
   {{ end }}
 
 </div>
