--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,15 +2,18 @@
 
 <form class="form-signin" role="form" action="/signup_account" method="post">
   <h2 class="form-signin-heading">
-    <i class="fa fa-comments-o">
-      骄傲的中年
-    </i>
+    <i class="fa fa-comments-o"></i>骄傲的中年
   </h2>
-  <div class="lead">Sign up for an account below</div>
   <input id="name" type="text" name="name" class="form-control" placeholder="Name" required autofocus>
   <input type="email" name="email" class="form-control" placeholder="Email address" required>
   <input type="password" name="password" class="form-control" placeholder="Password" required>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+
+  {{ if . }}
+  <p class="text-danger">&nbsp;&nbsp;&nbsp;注册失败</p>
+  {{ else }}
+  </br>
+  {{ end }}
+  <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
 </form>
 
 {{ end }}
