--- a/templates/new.thread.html
+++ b/templates/new.thread.html
@@ -4,7 +4,7 @@
 
 <form role="form" action="/thread/create" method="post">
   <div class="form-group">
-    <textarea class="form-control" name="topic" id="topic" placeholder="输入标题" rows="1"></textarea>
+    <textarea class="form-control" name="topic" id="topic" placeholder="输入标题" rows="1" maxlength="80"></textarea>
 
     <textarea name="body" id="editor" placeholder="Thread body here" rows="10"></textarea>
     <script>
