--- a/templates/public.navbar.html
+++ b/templates/public.navbar.html
@@ -20,8 +20,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
         <li><a class="btn-link" href="/login" ><i class="fa fa-id-card"></i>管理员</a></li>
-        <li><a class="btn-link" href="/login"><i class="fa fa-user-o"></i>登录</a></li>
-        <li><a class="btn-link" href="/signup"><i class="fa fa-sign-in"></i>注册</a></li>
+        <li><a class="btn-link" href="/login"><i class="fa fa-sign-in"></i>登录</a></li>
+        <li><a class="btn-link" href="/signup"><i class="fa fa-user-o"></i>注册</a></li>
       </ul>
     </div>
   </div>
