--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 
-<div class="pull-right">
+
 
 {{ range .Threads }}
 <div class="panel panel-default">
@@ -28,12 +28,16 @@
     <li><a href="/index?page={{ .Left }}">&laquo;</a></li>
     {{ end }}
 
-    {{ range . }}
-    {{ if eq . CurrentPage }}
+    {{ $currentPage := .CurrentPage }}
+
+    {{ range .PageList }}
+
+    {{ if eq . $currentPage }}
     <li class="active"><a href="/index?page={{ . }}">{{ . }}</a></li>
     {{ else }}
     <li><a href="/index?page={{ . }}">{{ . }}</a></li>
     {{ end }}
+
     {{ end }}
 
     {{ if eq .Right .TotalPages }}
@@ -44,6 +48,8 @@
 
     <li><a href="/index?page={{ .Max }}">尾页</a></li>
 </ul>
-</div>
+
+
+
 
 {{ end }}
