--- a/templates/public.navbar.html
+++ b/templates/public.navbar.html
@@ -8,14 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">
-        <i class="fa fa-comments-o"></i>
-        骄傲的中年
-      </a>
+
+      <a class="navbar-brand" href="/"><i class="fa fa-comments-o"></i>骄傲的中年</a>
     </div>
+
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a class="btn-link" href="/">首页</a></li>
+        <li class="active"><a class="btn-link" href="/">首页</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
@@ -24,6 +23,7 @@
         <li><a class="btn-link" href="/signup"><i class="fa fa-user-o"></i>注册</a></li>
       </ul>
     </div>
+
   </div>
 </div>
 {{ end }}
