--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 
 <div class="row">
 
-<div class="col-lg-2">
+    <div class="col-lg-2">
         <h4 class="bbs-classborder"><i class="fa fa-circle-o-notch fa-spin"></i>分类</h4>
         <ul class="nav nav-stacked">
-                <li><a class="btn-link" href='#'>杂项(1篇)</a></li>
-                <li><a class="btn-link" href='#'>杂项A(2篇)</a></li>
-                <li><a class="btn-link" href='#'>杂项B(22篇)</a></li>
+                {{ range threadclassinfo }}
+                <li><a class="btn-link" href='/class?id={{ .Id }}'>{{ .Name }}({{ .ThreadCount }}篇)</a></li>
+                {{ end }}
                 <li><a class="btn-link" href='#'><i class="fa fa-plus"></i>新建</a></li>
-        </ul>    
+        </ul>
 
         </br>
         <h4 class="bbs-classborder"><i class="fa fa-circle-o-notch fa-spin"></i>归档</h4>
@@ -18,61 +18,29 @@
                 <li class="list-group-item"><span class="badge">1篇</span>2018年2月</li>
                 <li class="list-group-item"><span class="badge">1篇</span>2018年3月</li>
         </ul>
+    </div>
 
-</div>
-
-<div class="col-lg-10">
-
-{{ range .Threads }}
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title bbs-title">
-            <i class="fa fa-comment-o pull-left"></i>
-            <a class="btn-link" href="/thread/read?id={{ .Uuid }}"> {{ .Topic }} </a>
-        </h3>
-        <div class="inaline">
-            {{ .Body }}
+    <div class="col-lg-10">
+        {{ range .Threads }}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title bbs-title">
+                    <i class="fa fa-comment-o pull-left"></i>
+                    <a class="btn-link" href="/thread/read?id={{ .Uuid }}"> {{ .Topic }} </a>
+                </h3>
+                <div class="inaline">
+                    {{ .Body }}
+                </div>
+            </div>
+            <div class="panel-footer">
+                {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}
+            </div>
         </div>
+        {{ end }}
+
+        {{ template "pagelist" . }}
     </div>
-    <div class="panel-footer">
-        {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}
-    </div>
-</div>
-{{ end }}
-
-<ul class="pagination bbs-center">
-    <li><a href="/index?page={{ .Min }}">首页</a></li>
-
-    {{ if eq .Left .CurrentPage }}
-    <li class="disabled"><a href="/index?page={{ .Left }}">&laquo;</a></li>
-    {{ else }}
-    <li><a href="/index?page={{ .Left }}">&laquo;</a></li>
-    {{ end }}
-
-    {{ $currentPage := .CurrentPage }}
-
-    {{ range .PageList }}
-
-    {{ if eq . $currentPage }}
-    <li class="active"><a href="/index?page={{ . }}">{{ . }}</a></li>
-    {{ else }}
-    <li><a href="/index?page={{ . }}">{{ . }}</a></li>
-    {{ end }}
-
-    {{ end }}
-
-    {{ if eq .Right .CurrentPage }}
-    <li class="disabled"><a href="/index?page={{ .Right }}">&raquo;</a></li>
-    {{ else }}
-    <li><a href="/index?page={{ .Right }}">&raquo;</a></li>
-    {{ end }}
-
-    <li><a href="/index?page={{ .Max }}">尾页</a></li>
-</ul>
 
 </div>
-
-</div>
-
 
 {{ end }}
