--- a/public/css/bbs.css
+++ b/public/css/bbs.css
@@ -59,6 +59,13 @@ div pre {
     margin-right: auto;
 }
 
+/* 设置bootstrap栅栏系统中文字垂直居中 */
+.bbs-vcenter {
+    position: relative;
+    top: 50%;
+    transform: translateY(-20%);
+}
+
 li a {
   color: #666666 !important;
 }
