--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,18 @@
     <div class="col-lg-2">
         <h4 class="bbs-classborder"><i class="fa fa-circle-o-notch fa-spin"></i>分类</h4>
         <ul class="nav nav-stacked">
-                {{ range threadclassinfo }}
-                <li><a class="btn-link" href='/class?id={{ .Id }}'>{{ .Name }}({{ .ThreadCount }}篇)</a></li>
-                {{ end }}
-                <li><a class="btn-link" href='#'><i class="fa fa-plus"></i>新建</a></li>
+            {{ range threadclassinfo }}
+             <li><a class="btn-link" href='/class?id={{ .Id }}'>{{ .Name }}({{ .ThreadCount }}篇)</a></li>
+            {{ end }}
+             <li><a class="btn-link" href='#'><i class="fa fa-plus"></i>新建</a></li>
         </ul>
 
         </br>
         <h4 class="bbs-classborder"><i class="fa fa-circle-o-notch fa-spin"></i>归档</h4>
         <ul class="list-group">
-                <li class="list-group-item"><span class="badge">1篇</span>2018年1月</li>
-                <li class="list-group-item"><span class="badge">1篇</span>2018年2月</li>
-                <li class="list-group-item"><span class="badge">1篇</span>2018年3月</li>
+            {{ range .threadArchived }}
+            <li class="list-group-item"><span class="badge">{{ .Count }}篇</span>{{ .Month }}</li>
+            {{ end }}
         </ul>
     </div>
 
