--- a/templates/new.thread.html
+++ b/templates/new.thread.html
@@ -3,17 +3,30 @@
 <script src="/static/ckeditor/ckeditor.js"></script>
 
 <form role="form" action="/thread/create" method="post">
-  <div class="form-group">
-    <textarea class="form-control" name="topic" id="topic" placeholder="输入标题" rows="1" maxlength="80"></textarea>
-
-    <textarea name="body" id="editor" placeholder="Thread body here" rows="10"></textarea>
-    <script>
+    <div class="form-group">
+        <textarea class="form-control" name="topic" id="topic" placeholder="输入标题" rows="1" maxlength="80"></textarea>
+        <textarea name="body" id="editor" placeholder="Thread body here" rows="10"></textarea>
+        <script>
             CKEDITOR.replace('editor', {
                     language: 'zh-CN',//改成中文版
             });
-    </script>
-    <br/>
-    <button class="btn btn-lg btn-primary pull-right" type="submit">发布</button>
+        </script>
+        <br/>
+
+        <div class="row">
+            <div class="col-sm-7"></div>
+            <div class="col-sm-1"><h4 class="text-primary lead pull-right bbs-vcenter">分类：</h4></div>
+            <div class="col-sm-2">
+                <select name="threadclass" class="form-control">
+                    {{ range threadclassinfo }}
+                    <option value={{ .Id }}>{{ .Name }}</option>
+                    {{ end }}
+                </select>
+            </div>
+            <div class="col-sm-2">
+                <button class="btn btn-lg btn-primary pull-right" type="submit">发布</button>
+            </div>
+      </div>
   </div>
 </form>
 
