--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -7,7 +7,7 @@
         </h3>
   </div>
   <div class="panel-footer">
-        {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}&nbsp;&nbsp;&nbsp;分类: 杂项
+          {{ .CreatedAtDate }}&nbsp;&nbsp;&nbsp;作者:&nbsp;{{ .User.Name }}&nbsp;&nbsp;&nbsp;评论数:&nbsp;{{ .NumReplies }}&nbsp;&nbsp;&nbsp;分类:&nbsp;{{ .ClassName }}
   </div>
 
   {{ if .CompatibleNonCkeidtor }}
