--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             {{ range threadclassinfo }}
              <li><a class="btn-link" href='/class?id={{ .Id }}'>{{ .Name }}({{ .ThreadCount }}篇)</a></li>
             {{ end }}
-             <li><a class="btn-link" href='#'><i class="fa fa-plus"></i>添加分类</a></li>
+             <li><a class="btn-link" href='https://39.106.168.73/'><i class="fa fa-plus"></i>添加分类</a></li>
         </ul>
 
         </br>
