--- a/templates/public.navbar.html
+++ b/templates/public.navbar.html
@@ -18,7 +18,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
-        <li><a class="btn-link" href="/login" ><i class="fa fa-id-card"></i>管理员</a></li>
+        <li><a class="btn-link" href="https://39.106.168.73/"><i class="fa fa-id-card"></i>管理员</a></li>
         <li><a class="btn-link" href="/login"><i class="fa fa-sign-in"></i>登录</a></li>
         <li><a class="btn-link" href="/signup"><i class="fa fa-user-o"></i>注册</a></li>
       </ul>
