--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,35 @@
 {{ define "content" }}
 
 <form class="form-signin center" role="form" action="/authenticate" method="post">
-  <h2 class="form-signin-heading">
-    <i class="fa fa-comments-o"></i>骄傲的中年
-  </h2>
-  <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
-  <input type="password" name="password" class="form-control" placeholder="Password" required>
+    <h2 class="form-signin-heading">
+        <i class="fa fa-comments-o"></i>骄傲的中年
+    </h2>
 
-  {{ if ne .ThreadUuid "" }}
-      <input type="hidden" name="uuid" value="{{ .ThreadUuid }}">
-  {{ end }}
+    <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+    <input type="password" name="password" class="form-control" placeholder="Password" required>
 
-  {{ if .Failed }}
-      <p class="text-danger">&nbsp;&nbsp;&nbsp;用户名或密码错误</p>
-  {{ else }}
-      <br/>
-  {{ end }}
+    {{ if ne .ThreadUuid "" }}
+        <input type="hidden" name="uuid" value="{{ .ThreadUuid }}">
+    {{ end }}
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-  <br/>
-  <a class="lead pull-right" href="/signup">注册</a>
+    {{ if .Failed }}
+        <p class="text-danger">&nbsp;&nbsp;&nbsp;用户名或密码错误</p>
+    {{ else }}
+        <br/>
+    {{ end }}
+
+    {{ if .Admin }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit">管理员登录</button>
+    {{ else }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+    {{ end }}
+
+    <br/>
+
+    {{ if not .Admin }}
+    <a class="lead pull-right" href="/signup">注册</a>
+    {{ end }}
+
 </form>
 
 {{ end }}
