--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -19,7 +19,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a class="btn-link" href="/thread/new"><i class="fa fa-pencil"></i>新建</a></li>
-        <li><a class="btn-link" href="/login" ><i class="fa fa-id-card"></i>管理员</a></li>
+        <li><a class="btn-link" href="https://{{ pubaddr }}/" ><i class="fa fa-id-card"></i>管理员</a></li>
         <li><a class="btn-link" href="/logout"><i class="fa fa-sign-out"></i>登出</a></li>
       </ul>
     </div>
