--- a/templates/admin.navbar.html
+++ b/templates/admin.navbar.html
@@ -14,7 +14,7 @@
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a class="btn-link" href="http://{{ pubaddr }}/">首页</a></li>
+                <li><a class="btn-link" href="/logout?index=true">首页</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="btn-link" href="/logout"><i class="fa fa-sign-out"></i>登出</a></li>
