--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
     {{ end }}
 
     {{ if .Admin }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">管理员登录</button>
+    <button class="btn btn-lg btn-danger btn-block" type="submit">管理员登录</button>
     {{ else }}
     <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
     {{ end }}
